feat: corrige segurança JWT, CORS e integração do dashboard